--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ php:
     - 5.4
 
 before_script:
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar install
+    - composer install
     - cp phpunit.xml.dist phpunit.xml
 
 script: phpunit
